# HyTEMPO

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
doc/: Doxyfile
doc/html/: annotated.html  annotated_dup.js  atmosphere_8py.html  atmosphere_8py.js  classatmosphere_1_1_atmosphere-members.html  classatmosphere_1_1_atmosphere.html  classatmosphere_1_1_atmosphere.js  classcomponent_1_1_component-members.html  classcomponent_1_1_component.html  classcomponent_1_1_component.js  classcomponent_1_1_component_1_1_drag__device-members.html  classcomponent_1_1_component_1_1_drag__device.html  classcomponent_1_1_component_1_1_drag__device.js  classcomponent_1_1_component_1_1_wetted__part-members.html  classcomponent_1_1_component_1_1_wetted__part.html  classcomponent_1_1_component_1_1_wetted__part.js  classcomponents_1_1_component-members.html  classcomponents_1_1_component.html  classcomponents_1_1_component.js  classcomponents_1_1_tank-members.html  classcomponents_1_1_tank.html  classcomponents_1_1_tank.js  classcomponents_1_1_wetted__part-members.html  classcomponents_1_1_wetted__part.html  classcomponents_1_1_wetted__part.js  classengine_1_1_engine-members.html  classengine_1_1_engine.html  classengine_1_1_engine.js  classengine_1_1_hybrid__engine-members.html  classengine_1_1_hybrid__engine.html  classengine_1_1_hybrid__engine.js  classengine_1_1_liquid__engine-members.html  (+180 more)
studies/: BlastStudy1D.py  BlastStudy2D.py  BlastStudyFull.py  LiquidRocketStudyOF.ipynb  LiquidRocketStudyPressures.ipynb  LiquidRocketStudyThrustBurntime.ipynb  LuminaStudy.py
(+78 files in other folders)
