[tool.black]
line-length = 79

[tool.isort]
profile = "black"
skip_gitignore = "true"
float_to_top = "true"
line_length = 79
known_first_party = "amici"

[tool.flake8]
extend-ignore = ["E501", "E203", "F841"] # Length of lines already handled by black, spacing, unused variables
per-file-ignores = ["__init__.py: F401"]

[tool.poetry]
name = "hytempo"
version = "0.2.0"
description = "HyEnD Trajectory EstiMation and Parameter Optimization"
authors = ["deckard007 <63878559+castellinilinguini@users.noreply.github.com>","Felix <st165934@stud.uni-stuttgart.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.24.3"
scipy = "^1.10.1"
matplotlib = "^3.7.1"
coolprop = "^6.4.3.post1"
ambiance = "^1.3.1"
pycea = "^0.0.2"
pandas = "^2.2.1"
h5py = "^3.13.0"
seaborn = "^0.13.2"
rocketpy = "^1.10.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
